Various useful imports

--- a/teamcharts_interactive.ipynb
+++ b/teamcharts_interactive.ipynb
@@ -7,7 +7,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.path import Path\n",
+    "from matplotlib.spines import Spine\n",
+    "from matplotlib.projections.polar import PolarAxes\n",
+    "from matplotlib.projections import register_projection\n",
+    "import seaborn as sns"
+   ]
   }
  ],
  "metadata": {
